@@ -40,7 +40,6 @@ files[] = handlers/views_handler_filter_boolean_operator.inc
 files[] = handlers/views_handler_filter_boolean_operator_string.inc
 files[] = handlers/views_handler_filter_date.inc
 files[] = handlers/views_handler_filter_equality.inc
-files[] = handlers/views_handler_filter_float.inc
 files[] = handlers/views_handler_filter_in_operator.inc
 files[] = handlers/views_handler_filter_in_operator.test
 files[] = handlers/views_handler_filter_many_to_one.inc
