@@ -364,6 +364,7 @@ Views 3.x-7.x-dev
     o #931582 by bec: Provide integration of {file_usage} table.
     o by dereine: Fix in_operator test.
     o by dereine: Fix more testcases by adding $this->resetAll().
+    o #931886 by bojanz: Remove views_handler_filter_float because numeric handler + dbtng does everything.
 
 Views 6.x-3.x-dev
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
